--- a/gallery.html
+++ b/gallery.html
@@ -169,7 +169,9 @@
                 Use WASD or arrow keys to move<br/>
                 Mouse to look around<br/>
                 Look for the green cursor to click a picture<br/>
-                ESC to exit
+                ESC to exit<br/>
+                <br/>
+                Press M to toggle background music
             </p>
         </div>
     </div>
@@ -591,10 +593,10 @@
 
 
         // Lighting
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+        const ambientLight = new THREE.AmbientLight(0xfff7ed, 0.5);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xffffff, 0.5, 100);
+        const pointLight = new THREE.PointLight(0xfff7ed, 0.5, 100);
         pointLight.position.set(0, roomHeight / 2 - 2, 0);
         scene.add(pointLight);
 
@@ -738,6 +740,22 @@
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
+        });
+
+        // Load audio
+        const bgMusic = new Audio('audio/background.mp3');
+        bgMusic.loop = true;  // keep playing in a loop
+        bgMusic.volume = 0.5; // adjust volume (0.0 to 1.0)
+
+        // Toggle music with "M"
+        window.addEventListener('keydown', (event) => {
+            if (event.key.toLowerCase() === 'm') {
+                if (bgMusic.paused) {
+                    bgMusic.play();
+                } else {
+                    bgMusic.pause();
+                }
+            }
         });
     </script>
 </body>
