--- a/gallery.html
+++ b/gallery.html
@@ -625,7 +625,7 @@
         createPicturePlane(artworks[6], picSize, picSize, new THREE.Vector3(19, picHeight, roomDepth / 2 - 1), new THREE.Euler(0, Math.PI, 0));
 
         // Door in the center of the back wall
-        const doorTexture = textureLoader.load('Images/door2.png');
+        const doorTexture = textureLoader.load('images/door2.png');
         const doorGeometry = new THREE.PlaneGeometry(30, 30); // width, height (make it taller than artworks)
         // const doorMaterial = new THREE.MeshBasicMaterial({ map: doorTexture });
         const doorMaterial = new THREE.MeshBasicMaterial({ 
@@ -643,7 +643,7 @@
         // -----------------------------------------------------
 
         // Load lamp texture
-        const lampTexture = new THREE.TextureLoader().load('Images/lamp.png');
+        const lampTexture = new THREE.TextureLoader().load('images/lamp.png');
 
         // Create a plane for the lamp
         const lampMaterial = new THREE.MeshBasicMaterial({
