--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="js/controls.js"></script>
     <script src="js/gallery.js"></script>
     <script src="js/room.js"></script>
+    <script src="js/models.js"></script>
     <script src="js/audio.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/main.js"></script>
