--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>3D Gallery Room</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <link rel="icon" type="image/png" href="assets/images/icon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
